azureps-cmdlets-docs/ResourceManager/AzureRM.Insights/v1.0.12/Get-AzureRmLogProfile.md
---
external help file: Microsoft.Azure.Commands.Insights.dll-Help.xml
online version: 
schema: 2.0.0
ms.assetid: C39D5E83-5498-4464-8B03-D9352EE9370C
---

# Get-AzureRmLogProfile

## SYNOPSIS
Gets a log profile.

## SYNTAX

```
Get-AzureRmLogProfile [-Name <String>] [<CommonParameters>]
```

## DESCRIPTION
The **Get-AzureRmLogProfile** cmdlet gets a log profile.

## EXAMPLES

### 1:
```

```

## PARAMETERS

### -Name
Specifies the name of the log profile to get.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS

[Add-AzureRmLogProfile](./Add-AzureRmLogProfile.md)

[Remove-AzureRmLogProfile](./Remove-AzureRmLogProfile.md)


